@@ -28,6 +28,10 @@ HOW TO UPDATE?
 
 Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.4.3
 
+New Keywords:
+- Text:           Added "source"
+- Text:           Added "default_value"
+
 -----------------------------------------------------------------------
  VERSION 0.4.2 (9/30/2020)
 -----------------------------------------------------------------------
@@ -88,7 +92,6 @@ Breaking Changes:
 - Simple Plot:    "autoscale" keyword removed
 
 New Commands:
-
 - Demo:           Added "show_demo" command to dearpygui.demo
 - Widgets:        Added "add_color_button"
 - Plots:          Added "add_drag_point"
